# pqam-dparamhu2021

./: HEA_pred.R  MANIFEST.in  README.md  compositionalModel.py  descriptors_gen_dev_predict_gsf.R  descriptors_gen_dev_predict_surf.R  predict.R  pyproject.toml
.github/workflows/: publishPyPI.yml  runtimeTest.yml  weeklyRuntimeTest.yml
pqam_dparamhu2021/: HEA_pred.R  LICENSE  __init__.py  compositionalModel.py  descriptors_gen_dev_predict_gsf.R  descriptors_gen_dev_predict_surf.R  elemental_features.csv  features_surf.Rdata  model.py  outputDefinition.json
pyqam_dparamhu2021/: HEA_pred.R  __init__.py  compositionalModel.py  descriptors_gen_dev_predict_gsf.R  descriptors_gen_dev_predict_surf.R  features_gsf.Rdata
rsource/: HEA_pred.R  README.txt  descriptors_gen_dev_predict_gsf.R  descriptors_gen_dev_predict_surf.R  elemental_features.csv  gbm-locfit.R  locfit_surf_2_var_all.Rdata  predict.R
source/: HEA_pred.R  gbm-locfit.R
