[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pqam_dparamhu2021"
version = "0.1.12"
authors = [
  { name="Adam Krajewski", email="ak@psu.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
description = "PyQAlloy-compatible Model for D Parameter prediction based on Hu 2021 (10.1016/j.actamat.2021.116800)"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "pymatgen>=2024.2.20",
    "rpy2>=3.5.14",
]

[project.urls]
"Homepage" = "https://github.com/amkrajewski/pqam-dparamhu2021"
"Bug Tracker" = "https://github.com/amkrajewski/pqam-dparamhu2021/issues"
